objects/CloudingoAgent__POSync__c.object
<CustomObject>
    <fields>
        <fullName>CloudingoAgent__BID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>BID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__FR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__LastSyncDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LastSyncDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO</label>
        <referenceTo>CloudingoAgent__PO__c</referenceTo>
        <relationshipLabel>POSyncs</relationshipLabel>
        <relationshipName>POSyncs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__RK__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>RK</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ST__c</fullName>
        <defaultValue>&quot;22&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ST</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>POSync</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>POSync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POSyncs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>